WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
310317
espn.com: Video pauses and does not resume inline after exiting Fullscreen
https://bugs.webkit.org/show_bug.cgi?id=310317
Summary
espn.com: Video pauses and does not resume inline after exiting Fullscreen
Dana Estra
Reported
2026-03-19 16:58:38 PDT
espn.com: Video pauses and does not resume inline after exiting Fullscreen
Attachments
Add attachment
proposed patch, testcase, etc.
Dana Estra
Comment 1
2026-03-19 16:58:39 PDT
<
rdar://problem/154903596
>
Dana Estra
Comment 2
2026-03-19 17:05:30 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/60971
EWS
Comment 3
2026-03-20 09:14:40 PDT
Committed
309623@main
(f5720a4f1041): <
https://commits.webkit.org/309623@main
> Reviewed commits have been landed. Closing PR #60971 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug