espn.com: Video pauses and does not resume inline after exiting Fullscreen https://bugs.webkit.org/show_bug.cgi?id=310317 rdar://154903596

Reviewed by Jer Noble.

Espn.com expects WebKit to pause a video before exiting fullscreen on iOS. Because
we exit first and pause second, espn's state machine that tracks the playback
state breaks and prevents the user from resuming the video until the page is refreshed.

To fix this, we should add a quirk specific to espn.com that pauses the video before
exiting fullscreen.

No new tests.

* Source/WebCore/html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::exitFullscreen):
* Source/WebCore/page/Quirks.cpp:
* Source/WebCore/page/Quirks.h:
* Source/WebCore/page/QuirksData.h:

Canonical link: https://commits.webkit.org/309623@main