Source/WebCore/page/Quirks.h
@@ -147,6 +147,8 @@ public:
 
     bool NODELETE needsPreloadAutoQuirk() const;
 
+    bool needsPauseBeforeFullscreenExitQuirk() const;
+
     bool shouldBypassBackForwardCache() const;
     bool shouldBypassAsyncScriptDeferring() const;
 
